--- a/index.html
+++ b/index.html
@@ -195,12 +195,7 @@
 
             <div class="about-content">
                 <div class="about-image">
-                    <div class="profile-placeholder">
-                        <svg width="96" height="96" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M22 10v6M2 10l10-5 10 5-10 5z"/>
-                            <path d="M6 12v5c3 3 9 3 12 0v-5"/>
-                        </svg>
-                    </div>
+                    <img src="profile.jpg" alt="Rahul Kumar" class="profile-photo" width="120" height="120" style="border-radius: 50%; object-fit: cover;">
                 </div>
 
                 <div class="about-text">
