--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rahul Kumar - Environmental Science Researcher | Climate & Sustainability</title>
+    <title>Rahul Kumar - Research Scholar Environmental Science and Engineering | Climate & Sustainability</title>
     <meta name="description" content="Environmental Science PhD researcher specializing in climate change impacts, ecosystem restoration, and sustainable environmental solutions. Explore cutting-edge research and collaborations.">
     <meta property="og:title" content="Rahul Kumar - Environmental Science Researcher">
     <meta property="og:description" content="PhD researcher in Environmental Science focusing on climate change impacts and ecosystem restoration.">
@@ -194,8 +194,8 @@
             </div>
 
             <div class="about-content">
-                <div class="about-image">
-                    <img src="profile.jpg" alt="Rahul Kumar" class="profile-photo" width="120" height="120" style="border-radius: 50%; object-fit: cover;">
+                <div class="about-image" style="width:100%;height:auto;display:flex;align-items:center;justify-content:center;">
+                    <img src="profile.jpg" alt="Rahul Kumar" class="profile-photo" style="width:100%;height:auto;max-width:500px;object-fit:cover;border-radius:20px;box-shadow:0 4px 24px rgba(0,0,0,0.12);">
                 </div>
 
                 <div class="about-text">
