--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <h1 class="hero-title">
                     <span class="gradient-text">Rahul Kumar</span>
                 </h1>
-                <p class="hero-subtitle">Environmental Science PhD Researcher</p>
+                <p class="hero-subtitle">Rahul Kumar, Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
                 <p class="hero-description">
                     Exploring the intersection of climate science, ecosystem restoration, and sustainable solutions for our planet's future
                 </p>
@@ -199,7 +199,7 @@
                 </div>
 
                 <div class="about-text">
-                    <h3>Research Journey</h3>
+                    <h3>Rahul Kumar, Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</h3>
                     <p>
                         Currently pursuing my PhD in Environmental Science with a focus on climate change impacts on terrestrial ecosystems. 
                         My research combines field studies, remote sensing data, and predictive modeling to understand how environmental 
