--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="logo-text">
                         <h1>Rahul Kumar</h1>
-                        <p>Environmental Science</p>
+                        <p>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
                     </div>
                 </div>
                 
@@ -973,7 +973,7 @@
             </div>
 
             <div class="footer">
-                <p>© 2025, Rahul Kumar, Ph.D. in Environmental Science and Engineering</p>
+                <p>© 2025, Rahul Kumar, Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
                 <p>Dedicated to advancing environmental science for a sustainable future.</p>
             </div>
         </div>
