--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rahul Kumar - Research Scholar Environmental Science and Engineering | Climate & Sustainability</title>
-    <meta name="description" content="Environmental Science PhD researcher specializing in climate change impacts, ecosystem restoration, and sustainable environmental solutions. Explore cutting-edge research and collaborations.">
-    <meta property="og:title" content="Rahul Kumar - Environmental Science Researcher">
-    <meta property="og:description" content="PhD researcher in Environmental Science focusing on climate change impacts and ecosystem restoration.">
+    <title>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</title>
+    <meta name="description" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
+    <meta property="og:title" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
+    <meta property="og:description" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,8 +26,7 @@
                         </svg>
                     </div>
                     <div class="logo-text">
-                        <h1>Rahul Kumar</h1>
-                        <p>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
+                        <h1>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</h1>
                     </div>
                 </div>
                 
@@ -153,9 +152,9 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1 class="hero-title">
-                    <span class="gradient-text">Rahul Kumar</span>
+                    <span class="gradient-text">Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</span>
                 </h1>
-                <p class="hero-subtitle">Rahul Kumar, Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
+                <p class="hero-subtitle">Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
                 <p class="hero-description">
                     Exploring the intersection of climate science, ecosystem restoration, and sustainable solutions for our planet's future
                 </p>
@@ -199,7 +198,7 @@
                 </div>
 
                 <div class="about-text">
-                    <h3>Rahul Kumar, Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</h3>
+                    <h3>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</h3>
                     <p>
                         Currently pursuing my PhD in Environmental Science with a focus on climate change impacts on terrestrial ecosystems. 
                         My research combines field studies, remote sensing data, and predictive modeling to understand how environmental 
@@ -973,7 +972,7 @@
             </div>
 
             <div class="footer">
-                <p>© 2025, Rahul Kumar, Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
+                <p>© 2025, Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
                 <p>Dedicated to advancing environmental science for a sustainable future.</p>
             </div>
         </div>
