--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</title>
+    <title>Rahul Kumar </title>
     <meta name="description" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
     <meta property="og:title" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
     <meta property="og:description" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
