--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Kumar </title>
     <meta name="description" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
-    <meta property="og:title" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
+    <meta property="og:title" content="Rahul Kumar | Research Scholar">
     <meta property="og:description" content="Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
