--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </svg>
                     </div>
                     <div class="logo-text">
-                        <h1>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</h1>
+                        <h1>Rahul Kumar</h1>
                     </div>
                 </div>
                 
@@ -198,19 +198,27 @@
                 </div>
 
                 <div class="about-text">
-                    <h3>Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</h3>
+                    <h3>Research Scholar, Department of Environmental Science & Engineering, IIT (ISM) Dhanbad</h3>
                     <p>
-                        Currently pursuing my PhD in Environmental Science with a focus on climate change impacts on terrestrial ecosystems. 
-                        My research combines field studies, remote sensing data, and predictive modeling to understand how environmental 
-                        changes affect biodiversity and ecosystem services.
+                    I am a research scholar in the Department of Environmental Science and Engineering at IIT (ISM) Dhanbad, working under the supervision of Prof. Riya Dutta. My research focuses on water security and climate change, utilizing an integrated approach that combines field studies, remote sensing, predictive modeling, and advanced data analytics.
                     </p>
+
+                    <h4>Key Skills and Expertise:</h4>
+                    <ul>
+                      <li>Climate and hydroclimatology data analysis (CMIP6, reanalysis datasets)</li>
+                      <li>Remote sensing data acquisition, preprocessing, and environmental applications</li>
+                      <li>Geospatial analysis and mapping using ArcGIS and QGIS</li>
+                      <li>Predictive hydrological modeling using the Variable Infiltration Capacity (VIC) model</li>
+                      <li>Bayesian network modeling for risk assessment</li>
+                      <li>Machine learning and AI applications (support vector machines—SVM, etc.)</li>
+                      <li>Bias correction techniques for climate and hydrological datasets</li>
+                      <li>Scientific data analysis and visualization using Python libraries (pandas, numpy, matplotlib, scikit-learn) and R (including ggplot)</li>
+                      <li>Climate data downscaling and integration of multi-source datasets</li>
+                    </ul>
+
+                    <h4>Keywords:</h4>
                     <p>
-                        Adaptable researcher skilled in handling high demands and multitasking. Leveraging expertise in
-                        atmospheric sciences, climate change, remote sensing and GIS. I specialize in using R and Python for
-                        analyzing climatic data, with a focus on water security and climate change through CMIP6 models,
-                        meteorological information, and remote sensing. My background in remote sensing allows me to interpret
-                        geospatial data, applying these skills to process large datasets and model climate-related factors to support
-                        sustainable decision-making.
+                    Water Security, Climate Change, Hydroclimatology, CMIP6, Reanalysis Data, Remote Sensing, ArcGIS, QGIS, Geospatial Analysis, VIC Model, Bayesian Network, Bias Correction, Support Vector Machine (SVM), Machine Learning, Artificial Intelligence, Climate Modeling, Python, R, pandas, numpy, matplotlib, scikit-learn, Downscaling, Scientific Visualization, Ecosystem Services
                     </p>
 
                     <div class="about-details">
