--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1 class="hero-title">
-                    <span class="gradient-text">RAHUL KUMAR</span>
+                    <span class="gradient-text">RAHUL KUMAR RESEARCH SCHOLAR</span>
                 </h1>
                 <p class="hero-subtitle">Research Scholar in Department of Environmental Science and Engineering at IIT (ISM)</p>
                 <p class="hero-description">
