--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
                 <h1 class="hero-title">
                     <span class="gradient-text">RAHUL KUMAR RESEARCH SCHOLAR</span>
                 </h1>
-                <p class="hero-subtitle" style="font-style: italic; color: #2563eb;">Department of Environmental Science and Engineering at IIT (ISM)</p>
+                <div class="hero-subtitle" style="font-style: italic; background: linear-gradient(90deg, #38bdf8 0%, #6366f1 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; text-fill-color: transparent;">
+                    Department of Environmental Science & Engineering, IIT (ISM) Dhanbad
+                </div>
                 <p class="hero-description">
                     Exploring the intersection of climate science, ecosystem restoration, and sustainable solutions for our planet's future
                 </p>
