--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   </div>
   <div class="main">
     <div class="profile-block">
-      <img src="rahul.jpg" class="profile-pic" alt="Rahul Kumar">
+      <img src="profile.jpg" class="profile-pic" alt="Rahul Kumar">
       <div class="profile-info">
         <h1>Rahul Kumar</h1>
         <div class="designation">Research Scholar</div>
