--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <body>
   <div class="navbar">
     <div class="brand">
-      <img src="rahul.jpg" alt="Rahul Kumar">
+      <img src="IIT(ISM).png" alt="IIT (ISM) Dhanbad Logo">
       <span>Rahul Kumar</span>
     </div>
     <nav>
