--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       background: #bc2222;
     }
     .banner {
-      background: url('banner.jpg') center/cover no-repeat;
+      background: url('Rahul landsat.png') center/cover no-repeat;
       min-height: 230px;
       display: flex;
       flex-direction: column;
