--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       background: #bc2222;
     }
     .banner {
-      background: url('Rahul landsat.png') center/cover no-repeat;
+      background: url('banner.jpg') center/cover no-repeat;
       min-height: 230px;
       display: flex;
       flex-direction: column;
@@ -195,7 +195,7 @@
 <body>
   <div class="navbar">
     <div class="brand">
-      <img src="IIT(ISM).png" alt="IIT (ISM) Dhanbad Logo">
+      <img src="rahul.jpg" alt="Rahul Kumar">
       <span>Rahul Kumar</span>
     </div>
     <nav>
@@ -253,5 +253,31 @@
       </div>
     </div>
   </div>
+  <section id="contact" style="background: #f4f4f4;">
+  <div style="max-width:1300px;margin:0 auto;padding:2.5rem 1rem;display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
+    <div style="flex:1 1 380px;min-width:320px;">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3642.507939206854!2d86.42996687445208!3d23.79566138504981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f6e27b96ea44ed%3A0x18e0ae1c7ea218dd!2sIndian%20Institute%20of%20Technology%20(Indian%20School%20of%20Mines)%2C%20Dhanbad!5e0!3m2!1sen!2sin!4v1717323527257!5m2!1sen!2sin"
+        width="100%" height="310" style="border:0;border-radius:14px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div style="flex:2 1 480px;min-width:320px;text-align:center;">
+      <h2 style="font-family:'Playfair Display',serif;text-align:center;font-size:2rem;margin-bottom:1.2rem;"><u>Contacts</u></h2>
+      <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
+        <b style="color:#b71c1c;">Office:</b> <br>
+        Academic Complex, Room XX<br>
+        Department of Environmental Science & Engineering<br>
+        IIT (ISM) Dhanbad, Jharkhand, INDIA
+      </div>
+      <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
+        <b style="color:#b71c1c;">Mobile:</b><br>
+        (+91) 9636525194
+      </div>
+      <div style="font-size:1.13rem;color:#20222a;">
+        <b style="color:#b71c1c;">Email:</b><br>
+        <span>rahulevs01@gmail.com</span>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
