--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
         <div class="contact-links">
           <a href="mailto:rahulevs01@gmail.com" title="Email"><i class="fa fa-envelope"></i></a>
           <a href="tel:9636525194" title="Phone"><i class="fa fa-phone"></i></a>
+          <a href="https://www.linkedin.com/in/23dr0122" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/rahul4planet" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://orcid.org/0009-0004-7391-0731" title="ORCID" target="_blank"><i class="fab fa-orcid"></i></a>
+          <a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+          <a href="https://www.researchgate.net/profile/YOUR_RESEARCHGATE_ID" title="ResearchGate" target="_blank"><i class="fab fa-researchgate"></i></a>
           <!-- Add social/profile links as needed -->
         </div>
         <div>
