--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
       background: #bc2222;
     }
     .banner {
-      background: url('nasa.jpg') center/cover no-repeat;
-      min-height: 230px;
+      background: url('nasa.jpg') center center/cover no-repeat;
+      min-height: 300px;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
       padding: 3rem 2rem 1.7rem 2rem;
       position: relative;
+      border-radius: 18px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.13);
+      overflow: hidden;
     }
     .banner:before {
       content: "";
