--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       background: #bc2222;
     }
     .banner {
-      background: url('nasa.jpg') center center/cover no-repeat;
+      background: url('nasa.jpg') center center/cover no-repeat, url('IIT-ISM.png') bottom right/120px no-repeat;
       min-height: 300px;
       display: flex;
       flex-direction: column;
