--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     }
     .banner {
       background: url('nasa.jpg') center center/cover no-repeat, url('IIT-ISM.png') bottom right/120px no-repeat;
-      min-height: 300px;
+      min-height: 230px;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
@@ -188,6 +188,17 @@
       font-style: normal;
       margin-right: 0.28em;
     }
+    .about-banner {
+      background: url('Rahul  landsat.png') center center/cover no-repeat;
+      min-height: 220px;
+      border-radius: 14px;
+      margin: 2.5rem 0 1.5rem 0;
+      box-shadow: 0 2px 16px rgba(60,60,60,0.11);
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-start;
+      position: relative;
+    }
     @media (max-width: 700px) {
       .main { flex-direction: column; gap: 1.5rem; padding: 1.2rem;}
       .profile-block { flex-direction: column; align-items: flex-start;}
@@ -241,6 +252,7 @@
     </div>
     <div>
       <div class="intro">Hi, welcome to my website!</div>
+      <div class="about-banner"></div>
       <div class="about-text">
         I am Rahul Kumar, currently a research scholar at IIT (ISM) Dhanbad in the Department of Environmental Science & Engineering.
         <br>
