--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       align-items: flex-start;
     }
     .profile-pic {
-      width: 140px;
-      height: 140px;
+      width: 200px;
+      height: 280px;
       border-radius: 14px;
       object-fit: cover;
       box-shadow: 0 2px 16px rgba(60,60,60,0.11);
@@ -214,7 +214,7 @@
     </div>
     <nav>
       <a href="#" class="active">Home</a>
-      <a href="#">About me</a>
+      <a href="#about" id="about-link">About me</a>
       <a href="#">Publications</a>
       <a href="#">Monitoring</a>
       <a href="#">Resources</a>
@@ -229,7 +229,7 @@
   </div>
   <div class="main">
     <div class="profile-block">
-      <img src="profile.jpg" class="profile-pic" alt="Rahul Kumar">
+      <img src="profile.jpg" class="profile-pic" alt="Rahul Kumar" style="width:200px;height:280px;object-fit:cover;">
       <div class="profile-info">
         <h1>Rahul Kumar</h1>
         <div class="designation">Research Scholar</div>
